--- a/src/App/Styles/MainLayout.module.css
+++ b/src/App/Styles/MainLayout.module.css
@@ -1,7 +1,10 @@
-.appWrap{
-  position: relative;
-width: 1250px;
-height: 100vh;
-border:1px solid rgba(0, 0, 0, 0.397);
+.headerWrap{
+  width: 100%;
+  height: 100px;
+}
+.contentWrap{
+position: relative;
+width: 95%;
+height: 80%;
 margin:0px  auto;
 }
