--- a/src/App/Styles/Nav.module.css
+++ b/src/App/Styles/Nav.module.css
@@ -1,11 +1,29 @@
 .navWrap{
     width: 100%;
-    height: 80px;
-    /* border:1px solid blue; */
+    height: 80%;
+
+    border-bottom: 1px solid black;
     padding: 15px;
+    background-image: url("/src/App/Img/header.svg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: flex-start;
+
+}
+.titleWrap{
+    width: 35%;
+}
+.titleName{
+    font-size: 50px;
+    margin-left: 100px;
+}
+.listWrap{
+    width:65%;
 }
 .listNavWrap{
-    width: 100%;
+
+    width: 400px;
     text-decoration: none;
     list-style: none;
     display: flex;
@@ -13,15 +31,17 @@
     justify-content: center;
     align-items: center;
     gap:0 20px;
+    padding: 10px;
+    border:2px solid gray;
+    border-radius:20px;
+    background-color:#ffffff;
 }
 .listItem{
-    padding: 10px;
+    padding: 5px;
     border:1px solid #ffffff;
     font-size: 18px;
     font-weight:500;
-    border-radius: 10px;
-    background-color:rgb(56,96,194);
-    color: #Ffffff;
+    color: #000000;
     cursor: pointer;
 }
 .listItem:hover{
