--- a/src/App/Styles/ProductItem.module.css
+++ b/src/App/Styles/ProductItem.module.css
@@ -1,7 +1,60 @@
 .wrapItem{
-    width: 250px;
-    height: 250px;
-    border:1px solid #ffffff;
+    width: 300px;
+    height: 400px;
+    border:1px solid gray;
     border-radius: 10px;
-    background-color: rgb(56,96,194);
+}
+
+.borderCard{
+    width: 90%;
+    height: 100%;
+    margin: 0px auto;
+}
+.wrapImg{
+    margin: 10px auto;
+    width: 250px;
+    height: 720;
+}
+.imgItem{
+    width: 100%;
+    height: 100%;
+    border:1px solid gray;
+    left: 20px;
+    border-radius:10px;
+
+}
+.titleCard{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.descriptionCard {
+    display: inline-block;
+    max-width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 12px;
+    font-weight: 500;
+    color: gray;
+    vertical-align: bottom;
+}
+.readMore{
+    cursor: pointer;
+    color:rgb(70, 70, 70);
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.wrapPrice{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: space-between;
+}
+.priceTitle{
+    margin-top: 10px;
+    color:#000000;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
