--- a/src/App/Styles/Products.module.css
+++ b/src/App/Styles/Products.module.css
@@ -1,11 +1,19 @@
 .wrapProducts{
-    margin: 0px auto;
-    padding: 10px;
-    width: 50%;
-    height: 90%;
-    border:1px solid red;
+    width: 100%;
+    height: 100%;
     display: flex;
-    align-items: flex-start;
+    flex-direction: row;
+    padding: 10px;
+}
+.wrapContent{
+
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 0px 20px;
+    gap: 20px 20px;
+}
+.menuNav{
+    width: 20%;
+    height: auto;
 }
