v.0.3 Update  store and refactor  code

--- a/src/App/Styles/Categories.module.css
+++ b/src/App/Styles/Categories.module.css
@@ -1,6 +1,6 @@
 .categoriesWrap{
     width: 200px;
-    height: 200px;
+    min-height: 200px;
     border:1px solid gray;
     border-radius:10px;
 
