--- a/src/App/Styles/MainPage.module.css
+++ b/src/App/Styles/MainPage.module.css
@@ -1,14 +1,6 @@
-.mainPageWrap{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-}
 .wrapContent{
-    width: 80%;
+    width: 100%;
     position: relative;
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -17,4 +9,11 @@
 .menuNav{
     width: 20%;
     height: auto;
+}
+.notification{
+    display: inline;
+    padding: 20px;
+    font-size: 32px;
+    border:1px solid gainsboro;
+    border-radius: 20px;
 }
