--- a/src/App/Styles/ProductItem.module.css
+++ b/src/App/Styles/ProductItem.module.css
@@ -1,4 +1,5 @@
 .wrapItem{
+
     width: 300px;
     height: 400px;
     border:1px solid gray;
@@ -9,6 +10,7 @@
     width: 90%;
     height: 100%;
     margin: 0px auto;
+    cursor: pointer;
 }
 .wrapImg{
     margin: 10px auto;
@@ -27,6 +29,7 @@
     font-size: 1.25rem;
     font-weight: 600;
     margin-bottom: 15px;
+    color:black;
 }
 .descriptionCard {
     display: inline-block;
@@ -57,4 +60,8 @@
     color:#000000;
     font-size: 20px;
     margin-bottom: 10px;
+}
+.price{
+    font-size: 16px;
+    color:black;
 }
