--- a/src/App/Styles/Nav.module.css
+++ b/src/App/Styles/Nav.module.css
@@ -1,28 +1,61 @@
+.menu{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color:#ffffff;
+    z-index: 1000;
+    position: fixed;
+}
 .navWrap{
     width: 100%;
-    height: 80%;
-
+    height: 100px;
     border-bottom: 1px solid black;
     padding: 15px;
     background-image: url("/src/App/Img/header.svg");
+    background-color:#ffffff;
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: flex-start;
-
+    z-index: 10001;
+    position: fixed;
 }
+.listNavBurger{
+margin-top: 200px;
+width: 100%;
+height: 150px;
+/* border:1px solid green; */
+z-index: 10001;
+display: flex;
+flex-direction: column;
+align-items:center;
+font-size: 40px;
+justify-content: space-between;
+}
+.listNavBurger .listItem{
+    font-size: 25px;
+}
+
+
 .titleWrap{
     width: 35%;
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: flex-start;
+
 }
 .titleName{
     font-size: 50px;
-    margin-left: 100px;
 }
 .listWrap{
     width:65%;
+    display: flex;
+    align-items:center;
+    justify-content: flex-start;
+
 }
 .listNavWrap{
-
     width: 400px;
     text-decoration: none;
     list-style: none;
@@ -35,6 +68,8 @@
     border:2px solid gray;
     border-radius:20px;
     background-color:#ffffff;
+
+
 }
 .listItem{
     padding: 5px;
@@ -44,6 +79,83 @@
     color: #000000;
     cursor: pointer;
 }
+
+.listNavBurger > li {
+    font-size: 40px;
+}
 .listItem:hover{
     color:rgb(101,210,254) ;
+}
+
+.burgerMenuWrap{
+    display: none;
+}
+
+@media screen  and (max-width:870px){
+
+
+.titleName{
+    font-size: 40px;
+}
+}
+@media screen  and (max-width:764px){
+    .titleName{
+        font-size: 35px;
+    }
+    }
+
+@media screen and (max-width:670px) {
+    .burgerMenuWrap{
+        display: block;
+    }
+    .titleName{
+        font-size: 40px;
+    }
+    .listNavWrap{
+        display:none;
+    }
+    .listWrap{
+        justify-content: flex-end;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+    .titleWrap{
+        width: 70%;
+    }
+
+    .burgerMenuWrap{
+        display: block;
+    }
+    .titleName{
+        font-size: 40px;
+    }
+    .listNavWrap{
+        display:none;
+    }
+    .listWrap{
+        justify-content: flex-end;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width:260px) {
+    .titleWrap{
+        width: 70%;
+    }
+
+    .burgerMenuWrap{
+        display: block;
+    }
+    .titleName{
+        font-size: 30px;
+    }
+    .listNavWrap{
+        display:none;
+    }
+    .listWrap{
+        justify-content: flex-end;
+        width: 30%;
+    }
 }
