--- a/src/App/Styles/ProductItem.module.css
+++ b/src/App/Styles/ProductItem.module.css
@@ -1,9 +1,9 @@
 .wrapItem{
-
     width: 300px;
     height: 400px;
     border:1px solid gray;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .borderCard{
@@ -15,7 +15,7 @@
 .wrapImg{
     margin: 10px auto;
     width: 250px;
-    height: 720;
+    height: 250px;
 }
 .imgItem{
     width: 100%;
@@ -64,4 +64,16 @@
 .price{
     font-size: 16px;
     color:black;
+}
+@media screen and (max-width:350px) {
+    .wrapItem{
+        width: 200px;
+        height: 330px;
+
+
+    }
+    .wrapImg{
+        width: 150px;
+        height: 150px;
+    }
 }
