--- a/src/App/Styles/Products.module.css
+++ b/src/App/Styles/Products.module.css
@@ -1,7 +1,10 @@
+
+
 .wrapProducts{
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
     flex-direction: row;
 }
 .wrapContent{
@@ -10,8 +13,19 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px 20px;
+
 }
 .menuNav{
     width: 20%;
     height: auto;
+}
+
+@media screen and (max-width:870px) {
+    .wrapProducts{
+        flex-flow: row-reverse wrap-reverse;
+        gap: 20px 20px;
+    }
+    .menuNav{
+    width: 100%;
+    }
 }
